--- a/TflAppVS.WebApp/Views/Home/Index.cshtml
+++ b/TflAppVS.WebApp/Views/Home/Index.cshtml
@@ -1,15 +1,34 @@
-﻿@model IEnumerable<TflAppVS.WebApp.Models.StatusDto>
+﻿@model TflAppVS.WebApp.Models.TflDto
 
 @{
     ViewData["Title"] = "Statuses";
 }
+
 <table class="table table-bordered table-responsive table-hover" style="font-family:arial;">
-    <tr>
+    <tr style="background-color: rgb(65, 75, 86);
+        color: white;">
+        <th>Trains</th>
+        <th>Due</th>
+    </tr>
+    @foreach(var a in Model.Arrivals)
+    {
+        <tr>
+            <td>@a.destinationName</td>
+            <td>@a.expectedArrival</td>
+        </tr>
+    }
+</table>
+
+
+<table class="table table-bordered table-responsive table-hover" style="font-family:arial;">
+    <tr style="background-color:rgb(65, 75, 86);
+        color:white;">
         <th>Name</th>
         <th>Status</th>
         @*<th>Reason</th>*@
     </tr>
-    @foreach (var s in Model)
+    
+    @foreach (var s in Model.Statuses)
     {
     <tr>
         <td style="background-color:rgb(@s.LineColour.R, @s.LineColour.G, @s.LineColour.B);
